# vibetype

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.en.md  README.md  README_zh.md
.github/workflows/: build.yml
data/: backend.json  computer_terms.json  text-processing.json
docs/: cli.md  fcitx5-frontend.md  ibus-frontend.md  install.md  text-polishing-evaluation.md  vibetype-spec.md
frontend/cli/: vibetype_cli.py
frontend/common/: vibetype_client.py  vibetype_config.py
frontend/fcitx5/: CMakeLists.txt  vibetype-inputmethod.conf  vibetype.conf.in  vibetype.cpp  vibetype.h  vibetype_fcitx5_helper.py
frontend/ibus/: vibetype_ibus.py
packaging/archlinux/: PKGBUILD  PKGBUILD.ci  PKGBUILD.local  README.md
packaging/ibus/: vibetype.xml  vibetype.xml.in
packaging/systemd/: vibetype-backend.service
src/backend/: config_manager.cc  config_manager.h  main.cc  qwen_engine.cc  qwen_engine.h  sensevoice_engine.cc  sensevoice_engine.h  text_processor.cc  text_processor.h
src/backend/test/: qwen_engine_stub.cc  test_text_processor.cc
testdata/fleurs/: README.md  manifest.jsonl
testdata/text-polishing/: README.md  synthetic-stress.jsonl
tests/: test_text_proc_config.py  test_text_processor.cc
tools/: benchmark_real_asr.py  benchmark_text_polishing.py  download_fleurs_test_audio.py  fake_ibus_client.py
